fixed footer height and padding on mobile

--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,7 @@ nav li.active a {
   .footer {
     margin-bottom: 0;
     height: 150px;
+    padding: 40px 100px;
   }
   .profile-description {
     margin-left: 0;
